# conservation-checker

./: AGENT.md  Cargo.toml  README.md  TEST-DIARY.md
examples/: basic.rs  budget_tracking.rs  cluster_monitoring.rs
memory/: JOURNAL.md
src/: lib.rs
